[project]
name = "vivintpy"
description = "Python library for interacting with a Vivint security and smart home system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" }
]
keywords = ["Vivint", "alarm system", "security", "smart home", "home automation", "asynchronous"]
dependencies = [
    "aiohttp (>=3.8.5)",
    "certifi (>=2022.9.24)",
    "pubnub (>=7)",
    "grpcio (>=1.51.1)",
    "protobuf (>=4.23.1)",
    "pyjwt (>=2.9.0)",
]
dynamic = [ "version" ]

[project.urls]
Homepage = "https://github.com/natekspencer/vivintpy"
Repository = "https://github.com/natekspencer/vivintpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
tox = ">=3.28,<5.0"
pytest = ">=7.2.2,<9.0.0"
pytest-asyncio = ">=0.21,<1.3"
pytest-cov = ">=4,<8"
pytest-timeout = "^2.1.0"
mypy = "^1.18"
grpcio-tools = ">=1.62.3,<2"
ruff = ">=0.5.0,<0.15"
pre-commit = "^4.3.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.pytest.ini_options]
addopts = ["--cov=./"]

[tool.coverage.run]
omit = ["*/proto/*", "*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
