[project]
name = "vivintpy"
description = "Python library for interacting with a Vivint security and smart home system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" }
]
keywords = ["Vivint", "alarm system", "security", "smart home", "home automation", "asynchronous"]
dependencies = [
    "aiohttp (>=3.8.5)",
    "certifi (>=2022.9.24)",
    "pubnub (>=7)",
    "grpcio (>=1.51.1)",
    "protobuf (>=4.23.1)",
    "pyjwt (>=2.9.0)",
]
dynamic = [ "version" ]

[project.urls]
Homepage = "https://github.com/natekspencer/vivintpy"
Repository = "https://github.com/natekspencer/vivintpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.76"
mypy = "^1.19"
pre-commit = "^4.5"
pytest = "^9.0"
pytest-asyncio = "^1.2"
pytest-cov = "^7.0"
pytest-timeout = "^2.4"
ruff = "^0.14"
tox = "^4.34"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "default-unprefixed"

[tool.pytest.ini_options]
addopts = ["--cov=./"]

[tool.coverage.run]
omit = ["*/proto/*", "*/tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
