[project]
name = "vivintpy"
description = "Python library for interacting with a Vivint security and smart home system."
authors = [{ name = "Nathan Spencer", email = "natekspencer@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "Vivint",
    "alarm system",
    "security",
    "smart home",
    "home automation",
    "asynchronous",
]
dependencies = [
    "aiohttp>=3.8.5",
    "certifi>=2022.9.24",
    "pubnub>=7",
    "grpcio>=1.51.1",
    "protobuf>=4.23.1",
    "pyjwt>=2.9.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/natekspencer/vivintpy"
Repository = "https://github.com/natekspencer/vivintpy"

[dependency-groups]
dev = [
    "grpcio-tools>=1.76,<2",
    "mypy>=1.19,<2",
    "pre-commit>=4.5,<5",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.2,<2",
    "pytest-cov>=7.0,<8",
    "pytest-timeout>=2.4,<3",
    "ruff>=0.15.1",
    "tox>=4.34,<5",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["*/proto/*", "*/tests/*"]

[tool.hatch.build.hooks.version]
path = "vivintpy/__init__.py"
pattern = true

[tool.hatch.build.targets.sdist]
include = ["vivintpy"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
addopts = ["--cov=./"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"