[metadata]
name = vivintpy
version = 2021.3.4
author = Nathan Spencer
author_email = natekspencer@gmail.com
description = Python library for interacting with the Vivint Sky API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natekspencer/vivintpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Home Automation

[options]
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp>=3.6
    certifi>=2019.9.11
    pubnub>=5.1.0

[options.package_data]
vivintpy = zjs_device_config_db.json