[metadata]
name = vivintpy
version = attr: vivintpy.__version__
author = Nathan Spencer
author_email = natekspencer@gmail.com
description = Python library for interacting with the Vivint Sky API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natekspencer/vivintpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Home Automation

[options]
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp>=3.6,<4
    certifi>=2019.9.11
    pubnub>=5.5.0,<7

[options.package_data]
* = py.typed
vivintpy = zjs_device_config_db.json

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-cov
lint =
    black
    isort

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
# To work with Black
max-line-length = 88
ignore =
    # E501: line too long
    E501,
    # W503: line break before binary operator
    W503

[mypy]
follow_imports = skip
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true